# MultiImplCMake

./: CMakeLists.txt
Iface/: CMakeLists.txt
Iface/Public/: Interface.h
IfaceImpl/: CMakeLists.txt
IfaceImpl/Public/: InterfaceImpl.cpp
Impl1/: CMakeLists.txt
Impl1/Private/: Impl1.cpp
Impl2/: CMakeLists.txt
Impl2/Private/: Impl2.cpp
MultiImpl/: CMakeLists.txt  MultiImpl.cpp  MultiImpl.h
MultiImpl/cmake/: MultiImplConfig.cmake.in
cmake/: Exporting.cmake
