project("Iface" VERSION 1.0.0)

add_library(${PROJECT_NAME} INTERFACE)

target_include_directories(${PROJECT_NAME}
	INTERFACE 
		$<BUILD_INTERFACE:${${PROJECT_NAME}_SOURCE_DIR}/Public>
		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

ExportTarget(${PROJECT_NAME})

install(FILES ${PROJECT_SOURCE_DIR}/Public/Interface.h 
	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
